# docscope

./: .gitignore  LICENSE  README.md  config.example.toml
clients/vscode/: README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
clients/vscode/media/: main.js  style.css
clients/vscode/src/: cardsView.ts  daemonClient.ts  daemonProcess.ts  extension.ts
daemon/: README.md  pyproject.toml
daemon/src/docscope/: __init__.py  assembler.py  cache.py  cli.py  config.py  context_extractor.py  intent_classifier.py  logging_setup.py  mdn_resolver.py  models.py  pipeline.py  registry.py  retriever.py  rust_resolver.py  search.py  server.py  symbol_resolver.py  version_resolver.py  ws.py
daemon/tests/: conftest.py  test_cache.py  test_context_extractor.py  test_extractor_m4.py  test_intent_classifier.py  test_pipeline_integration.py  test_pipeline_m3.py  test_resolvers_m4.py  test_retriever.py  test_search.py  test_server.py  test_symbol_resolver.py  test_version_resolver.py  test_ws.py
daemon/tests/fixtures/: make_inventory.py  testpkg_api.html  testpkg_objects.inv
llm_reports/: M2M_explain_usage.md  USAGE_GUIDE.md  docscope_2026-07-05_session.md
