[project]
name = "docscope"
version = "0.1.0"
description = "Ambient, version-pinned documentation navigator for your editor"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "docscope contributors" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sphobjinv>=2.3",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-python>=0.23,<0.26",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
]

[project.scripts]
docscope = "docscope.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]
ignore = ["B008"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
